--- a/app/scss/pages/_index.scss
+++ b/app/scss/pages/_index.scss
@@ -1,8 +1,25 @@
-// Introduction Styles
 .introduction__actions {
     display: flex;
     margin-top: 1rem;
 }
+
+.introduction__icon {
+    width: auto;
+    height: 7rem;
+    box-shadow: none;
+    bottom: 3rem;
+    left: -0.75rem;
+}
+
+
+.introduction h1 {
+    font-family: 'Space Mono', monospace, 'Reem Kufi', sans-serif;
+
+    .cursor {
+        color: $primary-color;
+    }
+}
+
 
 .action__button {
     width: 12rem;
@@ -52,19 +69,28 @@
     }
 }
 
-.introduction__icon {
-    width: auto;
-    height: 7rem;
-    box-shadow: none;
-    bottom: 3rem;
-    left: -0.75rem;
+
+
+.projects {
+    .humanly__card {
+        border-color: $primary-color;
+    }
 }
 
-.introduction h1 {
-    font-family: 'Space Mono', monospace, 'Reem Kufi', sans-serif;
+.projects__header {
+    display: flex;
+    align-items: center;
 
-    .cursor {
-        color: $primary-color;
+    div {
+        width: 100%;
+        height: 2px;
+        background: linear-gradient(90deg, rgba($color: $primary-color, $alpha: 1) 0%, rgba($color: $primary-color, $alpha: 0) 100%);
+        margin-left: 1rem;
+        border-radius: 1rem;
+    }
+
+    h4 {
+        margin-bottom: 0;
     }
 }
 
